[package]
name = "basin"
version = "0.1.0"
authors = ["Lucas Timmins <timmins.s.lucas@gmail.com>"]
edition = "2018"

[dependencies]
winit = "0.18.1"

[target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "openbsd", target_os = "netbsd"))'.dependencies]
sctk = { package = "smithay-client-toolkit", path = "../client-toolkit" }
byteorder = "1.3.1"

[patch.crates-io]
smithay-client-toolkit = { path = "../client-toolkit" }
